Examples/test-suite/errors/cpp_using_declaration_overload.i
%module xxx

struct Base {
  void m(bool) {}
};
struct Derived : Base { 
  void m(bool) const {}
  using Base::m;
};
